<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:weightSum="10"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="6">-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@mipmap/no_image"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/iconTopLeft"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:visibility="invisible"-->
<!--            android:layout_gravity="top|left"-->
<!--            android:src="@drawable/alpha_c_circle"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/iconTopRight"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:visibility="invisible"-->
<!--            android:layout_gravity="top|right"-->
<!--            android:src="@drawable/ic_password"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/iconBottomLeft"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:visibility="invisible"-->
<!--            android:layout_gravity="bottom|left"-->
<!--            android:src="@drawable/ic_password"/>-->

<!--        <ImageView-->
<!--            android:id="@+id/iconBottomRight"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:visibility="invisible"-->
<!--            android:layout_gravity="bottom|right"-->
<!--            android:src="@drawable/alpha_c_circle"/>-->

<!--    </FrameLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:src="@mipmap/no_image"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:shape="ring"/>

        <ImageView
            android:id="@+id/iconTopLeft"
            android:visibility="invisible"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/alpha_c_circle"/>

        <ImageView
            android:id="@+id/iconTopRight"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_password"/>

        <ImageView
            android:id="@+id/iconBottomLeft"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_password"/>

        <ImageView
            android:id="@+id/iconBottomRight"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/alpha_c_circle" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>


    <TextView
        android:id="@+id/playerNameTextView"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/player_name" />

    <TextView
        android:id="@+id/teamNameTV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeStepGranularity="2sp"
        android:text="@string/team_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:id="@+id/difficulty1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeStepGranularity="2sp" />
        <TextView
            android:id="@+id/difficulty2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeStepGranularity="2sp" />
        <TextView
            android:id="@+id/difficulty3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeStepGranularity="2sp" />
    </LinearLayout>

</LinearLayout>